# viv-pay

./: README.md  pyproject.toml
tests/: conftest.py  test_checkout.py  test_live_stripe.py  test_middleware.py  test_models.py  test_webhooks.py
viv_pay/: __init__.py  checkout.py  config.py  customer.py  middleware.py  models.py  portal.py  webhooks.py
viv_pay/templates/pay/: cancel.html  success.html
